# Homework_3

./: CMakeLists.txt  html_writer.cpp  main.cpp
api/: html_writer.hpp
web_app/: example.html
